Created home.html page

--- a/Sustainability Outlook.html
+++ b/Sustainability Outlook.html
@@ -46,7 +46,7 @@
     <main>
         <section class="categoriesSection">
             <div class="categoryContent">
-                <a href="" class="category">
+                <a href="./home.html" class="category">
                     <img src="./images/IMG-20210813-WA0003.jpg" alt="">
                     <h5>Home</h5>
                 </a>
