--- a/Sustainability Outlook.html
+++ b/Sustainability Outlook.html
@@ -89,9 +89,20 @@
                 <div class="row-1">
                     <div>
                         <div class="column-1">
-                            <h4>Overall Sustainability Advisory</h4>
-                            <img src="./images/PikPng.com_orange-arrow-icon-png_2712432.png" alt="">
+                            <h4 style="margin-bottom: 1rem;">Overall Sustainability Advisory</h4>
+                            <div class="dangerWarning" style="background-color: red;">
+                                <div class="dangerTriangle">
+                                    <div class="redBar" style="background-color: red;"></div>
+                                </div>
+                                <div class="dangerText">
+                                    <i class="fa fa-dollar-sign"></i>
+                                    <p>This food has a strong negative impact on the environment.
+                                        Carefully consider your decision.
+                                    </p>
+                                </div>
+                            </div>                        
                         </div>
+
                         <div class="column-1">
                             <h4>Overall Sustainability</h4>
                             <div class="imgContainer">
