--- a/Sustainability Outlook.html
+++ b/Sustainability Outlook.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/owl.carousel.min.css">
+    <link rel="stylesheet" href="./css/owl.theme.default.min.css">
     <link rel="stylesheet" href="./css/style.css">
     <script src="./js/all.js"></script>
     <title>Arkansas</title>
@@ -39,9 +41,44 @@
         <div class="rightAnchor"></div>
     </div>
 
-    <div class="heroSection">
-        <img src="./images/1_JqFgM7CLNIOVkjADyeVKPA.png" alt="Hero Image">
-    </div>
+    <section class="heroArea foodlanceHeroArea">
+		<div class="wrapper">
+			<div class=" heroCarousel owl-theme owl-carousel">
+				<div class="item">
+					<img src="./images/option 1.jpg" alt="" class="heroImg">
+					<div class="heroText">
+						<h3>WELCOME TO myFoodlance</h3>
+						<p> Industrial efficiency modelling (food and bio-product)</p>
+					</div>
+				</div>
+	
+				<div class="item">
+					<img src="./images/lily-banse--YHSwy6uqvk-unsplash (1) - Copy.jpg" alt="" class="heroImg">
+					<div class="heroText">
+						<h3>WELCOME TO myFoodlance</h3>
+						<p>Nutrition sensitive agricultural interventions and food value chain analysis</p>
+					</div>
+				</div>
+	
+				<div class="item">
+					<img src="./images/hero1.jpg" alt="" class="heroImg">
+					<div class="heroText">
+						<h3>WELCOME TO myFoodlance</h3>
+						<p>Environmental Nutrition modelling</p>
+					</div>
+				</div>
+			</div>
+			
+			<div class="testimonial-carousel-controls">
+				<div class="owl-controls">
+					<div class="owl-nav">
+						<div class="prevHero"><i class="fa fa-chevron-left heroBtn"></i></div>
+						<div class="nextHero"><i class="fa fa-chevron-right heroBtn nextBtn"></i></div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
 
     <main>
         <section class="categoriesSection">
@@ -219,6 +256,8 @@
     </footer>
 
 
+    <script src="./js/jquery-3.4.1.min.js"></script>
+    <script src="./js/owl.carousel.min.js"></script>
     <script src="./js/script.js"></script>
 </body>
 </html>
