--- a/Nutrition & Health Outlook2.html
+++ b/Nutrition & Health Outlook2.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/owl.carousel.min.css">
+    <link rel="stylesheet" href="./css/owl.theme.default.min.css">
     <link rel="stylesheet" href="./css/style.css">
     <script src="./js/all.js"></script>
     <title>Arkansas</title>
@@ -210,7 +212,8 @@
     </footer>
 
 
-
+    <script src="./js/jquery-3.4.1.min.js"></script>
+    <script src="./js/owl.carousel.min.js"></script>
     <script src="./js/script.js"></script>
 </body>
 </html>
